2002-01-04  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump required libart version to the one
	with art_render_mask.

2002-01-04  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump version, update dependencies.
	* librsvg-2.0.pc.in: Update dependencies.

	* rsvg-bpath-util.c:
	* rsvg-css.c:
	* rsvg-css.h:
	* rsvg-defs.c:
	* rsvg-paint-server.c:
	* rsvg-paint-server.h:
	* rsvg-path.c:
	* rsvg-path.h:
	* rsvg.c:
	Fix includes to include only what's needed.

	* test-62699.svg: Add a test case for another bug.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* rsvg.c: Use art_render_mask in libart.

	* Makefile.am:
	* art_render_mask.c: Remove.
	* art_render_mask.h: Remove.
	Get rid of our own copy of art_render_mask.

	* configure.in: Change back so compatible with older autoconf
	and automake. We'll go back to the future when glib does.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* acinclude.m4: Remove.
	We don't need the NAUTILUS_FREETYPE2 macro any more.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* TODO:
	* test-rsvg.c: (main):
	Some cleanup on the test program.

	* configure.in:
	* librsvg.spec.in:
	Remove gtk requirement and remove remnants of the old
	freetype requirement. Also get rid of gmodule and gthread
	since we only use glib itself.

	* makefile-simple:
	* subpixel-text-test:
	Remove some no-longer-useful files (these were never
	in the tarball anyway).

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* rsvg.c: (rsvg_text_handler_characters):
	Don't set font_family to NULL -- by not setting it, we
	end up with the default font family. If we set it, we'd
	get an error when rendering.

2002-01-02  Darin Adler  <darin@bentspoon.com>

	* librsvg-2.0.pc.in: Remove spurious 2.0 from pango
	package name.

2002-01-02  Darin Adler  <darin@bentspoon.com>

	* Makefile.am:
	* configure.in:
	* librsvg-2.0.pc.in:
	* librsvg.spec.in:
	* rsvg-ft.c: Remove.
	* rsvg-ft.h: Remove.
	* rsvg.h:
	* test-ft-gtk.c: Remove.
	* test-ft.c: Remove.