@@ -2,19 +2,19 @@ AC_INIT(rsvg.h)
 
 dnl ===========================================================================
 
-ART_REQUIRED=2.3.8
 GDK_PIXBUF_REQUIRED=1.3.7
 GLIB_REQUIRED=1.3.1
+LIBART_REQUIRED=2.3.8
+LIBXML_REQUIRED=2.2.8
 PANGOFT2_REQUIRED=0.22
 POPT_REQUIRED=1.5
-XML_REQUIRED=2.2.8
 
-AC_SUBST(ART_REQUIRED)
 AC_SUBST(GDK_PIXBUF_REQUIRED)
 AC_SUBST(GLIB_REQUIRED)
+AC_SUBST(LIBART_REQUIRED)
+AC_SUBST(LIBXML_REQUIRED)
 AC_SUBST(PANGOFT2_REQUIRED)
 AC_SUBST(POPT_REQUIRED)
-AC_SUBST(XML_REQUIRED)
 
 dnl ===========================================================================
 
@@ -54,7 +54,12 @@ GNOME_PLATFORM_GNOME_2(yes)
 
 dnl ===========================================================================
 
-PKG_CHECK_MODULES(LIBRSVG, glib-2.0 >= $GLIB_REQUIRED gdk-pixbuf-2.0 >= $GDK_PIXBUF_REQUIRED libxml-2.0 >= $XML_REQUIRED libart-2.0 >= $ART_REQUIRED pangoft2 >= $PANGOFT2_REQUIRED)
+PKG_CHECK_MODULES(LIBRSVG, \
+	gdk-pixbuf-2.0 >= $GDK_PIXBUF_REQUIRED \
+	glib-2.0 >= $GLIB_REQUIRED \
+	libart-2.0 >= $LIBART_REQUIRED \
+	libxml-2.0 >= $LIBXML_REQUIRED \
+	pangoft2 >= $PANGOFT2_REQUIRED)
 AC_SUBST(LIBRSVG_LIBS)
 AC_SUBST(LIBRSVG_CFLAGS)
 
